--- a/app.json
+++ b/app.json
@@ -9,14 +9,32 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "$(PRODUCT_NAME) needs access to your camera to take photos and videos."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "CAMERA",
+        "RECORD_AUDIO",
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.ACCESS_MEDIA_LOCATION",
+        "CAMERA",
+        "RECORD_AUDIO",
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.ACCESS_MEDIA_LOCATION"
+      ],
+      "package": "com.Luciano.Projeto_camera"
     },
     "web": {
       "bundler": "metro",
@@ -26,12 +44,19 @@
     "plugins": [
       "expo-router",
       [
-        "expo-splash-screen",
+        "react-native-vision-camera",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "enableMicrophone": true,
+          "cameraPermissionText": "$(PRODUCT_NAME) needs access to your camera to take photos and videos.",
+          "microphonePermissionText": "$(PRODUCT_NAME) needs access to your microphone to record audio."
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photoPermission": "$(PRODUCT_NAME) needs access to your photos to save images.",
+          "savePhotosPermission": "$(PRODUCT_NAME) needs access to your photos to save images.",
+          "isAccessMediaLocationEnabled": true
         }
       ]
     ],
